endpoint for loading folder defects
